@@ -4,6 +4,7 @@ version <next>
 - Sierra Online audio file demuxer and decoder
 - Apple QuickDraw (qdrw) video decoder
 - Creative ADPCM audio decoder
+- Electronic Arts Multimedia (WVE/UV2/etc.) file demuxer
 
 version 0.4.9-pre1:
 
